[metadata]
name = ViSP-Inversion
description = Preprocess ViSP L1 Data and Invert to L2
long_description = file: README.md
author = "NSO / AURA"
author_email = "huitenbroek@nso.edu"
license = BSD3
url = https://github.com/DKISTDC/visp-inversion
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
setup_requires = setuptools_scm
packages = find:
include_package_data = True
install_requires =
  numpy >= 2.2
  dkist >= 1.13
  pandas >= 2.2
  numba >= 0.61
  astropy >= 0.1
  scipy >= 1.15
  mda-xdrlib
  scikit-learn
  rhanalyze @ git+https://github.com/dkistdc/RH.git@1566439d65c0877942440757865f05402a3589cb#subdirectory=python
